# kodama

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
kodama-api/: Cargo.toml
kodama-api/src/: admin_client.rs  client.rs  database.rs  database_query.rs  from_row.rs  hyper.rs  lib.rs  metric.rs  project.rs  sql_trace.rs  timestamp.rs
kodama-api/src/database/: connection.rs  from_row.rs  mod.rs  query.rs
kodama-api/src/query/: columns.rs  delete.rs  insert.rs  join.rs  mod.rs  select.rs  update.rs  value.rs
kodama-cli/: Cargo.toml
kodama-cli/src/: main.rs
kodama-internal/: Cargo.toml
kodama-internal/src/: error.rs  lib.rs  metric.rs  record.rs  service.rs
kodama-server/: Cargo.toml
kodama-server/src/: error.rs  kodama.rs  main.rs  record.rs  value.rs
kodama-server/src/database/: create.rs  delete.rs  execute.rs  insert.rs  mod.rs  query.rs  update.rs
kodama-server/src/metric/: put.rs
kodama-server/src/project/: create.rs  list.rs
kodama-server/src/service/: create.rs  list.rs
kodama-server/src/sql_trace/: post.rs  put.rs
schema/: schema.sql
