[package]
name = "kodama-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
chrono = "0.4.31"
hyper = { version = "0.14.27", features = ["client", "full"], optional = true }
serde_json = "1.0.108"
tokio = { version = "1.33.0", optional = true }
tracing = "0.1.40"
rusqlite = { version = "0.29.0", features = [
    "bundled",
    "trace",
    "uuid",
    "chrono",
] }

[features]
default = []
admin = ["dep:tokio", "dep:hyper"]
