[package]
name = "kodama-api"
version = "0.1.2"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
rusqlite = { version = "0.30.0", features = [
    "bundled",
    "trace",
    "uuid",
    "chrono",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
