[package]
name = "kodama-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
kodama-api = { path = "../kodama-api", features = ["admin"] }
chrono = "0.4.31"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "registry",
] }
tokio = { version = "1.33.0", features = ["full", "tokio-macros"] }
