[package]
name = "kodama-internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = [
    "bundled",
    "trace",
    "uuid",
    "chrono",
    "column_decltype",
] }
thiserror = "1.0.49"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "registry",
] }
axum = { version = "0.6.20", features = ["http2", "tracing"] }
tokio = { version = "1.32.0", features = [
    "tracing",
    "fs",
    "bytes",
    "macros",
    "full",
] }
dotenvy = "0.15.7"
serde = { version = "1.0.189", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = "0.4.31"
kodama-api = { path = "../kodama-api" }
serde_json = "1.0.108"
