[package]
name = "kodama-internal"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = [
    "bundled",
    "trace",
    "uuid",
    "chrono",
    "column_decltype",
] }
thiserror = "1.0.49"
tracing = "0.1.37"
serde = { version = "1.0.189", features = ["derive"] }
chrono = "0.4.31"
kodama-api = { path = "../kodama-api" }
