[package]
name = "kodama-internal"
version = "0.1.2"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
kodama-api = { path = "../kodama-api" }
rusqlite = { version = "0.30.0", features = [
    "bundled",
    "trace",
    "uuid",
    "chrono",
    "column_decltype",
] }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.52"
tracing = "0.1.40"
