[package]
name = "kodama-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.49"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "registry",
] }
dotenvy = "0.15.6"
serde = { version = "1.0.189", features = ["derive"] }
kodama-api = { path = "../kodama-api" }
kodama-internal = { path = "../kodama-internal" }
serde_json = "1.0.108"
